CSS is getting closer!
Columns are in place and dark mode has started.

--- a/src/Volvox.Helios.Web/Views/Home/Example.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Example.cshtml
@@ -5,17 +5,20 @@
 <div id="wrapper">
 
     <div id="sidebar-wrapper">
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="img-server-icon" >
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="img-server-icon" >
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="img-server-icon" >
+        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="server-img" >
+        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="server-img" >
+        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="server-img" >
     </div>
 
     <div id="modulebar-wrapper">
-        streamer module
+        <h5 class="text-center">Modules</h5>
+
+        <button class="btn btn-block btn-module">Stream Role</button>
+        <button class="btn btn-block btn-module">Stream Announcer</button>
     </div>
 
     <div id="page-content-wrapper">
-        <div class="container-fluid">
+        <div class="container-content">
             hi
 
             <div class="col-12">
