--- a/src/Volvox.Helios.Web/wwwroot/css/sidebar.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/sidebar.css
@@ -48,19 +48,31 @@
     margin-left: 84px;
     padding-left: 5px;
     padding-top: 15px;
-    width: 300px;
-    height: 100%
+    width: 200px;
+    height: 100%;
+    background: #2f3136;
+    color: #fff;
+}
+
+.modulebar-ul {
+    list-style-type: none;
 }
 
 #page-content-wrapper {
     width: 100%;
     position: absolute;
     padding: 15px;
+    background: #36393f;
+    height: 100%;
 }
 
 #wrapper.toggled #page-content-wrapper {
     position: absolute;
     margin-right: -84px;
+}
+
+.container-content {
+
 }
 
 /* Sidebar Styles */
@@ -131,14 +143,26 @@
 
     #page-content-wrapper {
         padding: 10px;
-        padding-top: 82px;
-        padding-left: 82px;
-        padding-right: 20px;
-        position: relative;
+        padding-top: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        position: fixed;
+        margin-left: 284PX;
+        color: #fff;
     }
 
     #wrapper.toggled #page-content-wrapper {
         position: relative;
         margin-right: 0;
     }
+}
+
+.server-img {
+    padding-bottom: 10px;
+}
+
+.btn-module {
+    font-weight: 400;
+    color: #fff;
+    background-color: transparent;
 }
