--- a/src/Volvox.Helios.Web/Views/Home/Example.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Example.cshtml
@@ -5,22 +5,70 @@
 <div id="wrapper">
 
     <div id="sidebar-wrapper">
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="server-img" >
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="server-img" >
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="server-img" >
+        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
     </div>
 
-    <div id="modulebar-wrapper">
-        <h5 class="text-center">Modules</h5>
 
-        <button class="btn btn-block btn-module">Stream Role</button>
-        <button class="btn btn-block btn-module">Stream Announcer</button>
-    </div>
 
     <div id="page-content-wrapper">
-        <div class="container-content">
-            hi
 
+        <div id="modulebar-wrapper">
+            <h5 class="text-center">Modules</h5>
+
+            <button class="btn btn-block btn-module">Stream Role</button>
+            <button class="btn btn-block btn-module">Stream Announcer</button>
+        </div>
+
+        <div class="container-content">
+
+            <div class="card background-dark2">
+                <h5 class="card-header text-center color-disabled">Stream Announcer</h5>
+                <div class="card-body">
+                    <h5 class="text-center">Description</h5>
+                    <p class="card-text">
+                        With this module you are able to announce to a defined text channel when someone on the server goes live on Twitch.
+                    </p>
+
+                    <div class="collapse" id="StreamAnnouncerConfig">
+                        <hr>
+                        <h5 class="text-center">Config</h5>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Enabled
+                            </label>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">Select text-channel to send the messages to:</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                            </select>
+                        </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Delete messages on stream conclusion
+                            </label>
+                        </div>
+
+                        <button type="button" class="btn btn-info">Save</button>
+
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-link btn-block" role="button" data-toggle="collapse" data-target="#StreamAnnouncerConfig" aria-expanded="false" aria-controls="StreamAnnouncerConfig" >Manage Module</a>
+                </div>
+            </div>
+                
             <div class="col-12">
 
                 <div class="collapse" id="StreamRole">
@@ -182,6 +230,10 @@
                 </div>
 
             </div>
+        </div>
+
+        <div id="configbar">
+
         </div>
 
     </div>
