Working on collapse module view
Cant have just one viewable at a time yet.  Also adjusted card layout.

--- a/src/Volvox.Helios.Web/wwwroot/css/sidebar.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/sidebar.css
@@ -64,6 +64,7 @@
     padding: 15px;
     background: #36393f;
     height: 100%;
+    overflow: auto;
 }
 
 #wrapper.toggled #page-content-wrapper {
