--- a/src/Volvox.Helios.Web/Views/Home/Example.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Example.cshtml
@@ -10,147 +10,50 @@
         <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
     </div>
 
-
-
     <div id="page-content-wrapper">
-
-        <div id="modulebar-wrapper">
+        <div id="accordion">
+            
+            <div id="modulebar-wrapper">
             <h5 class="text-center">Modules</h5>
-
-            <button class="btn btn-block btn-module">Stream Role</button>
-            <button class="btn btn-block btn-module">Stream Announcer</button>
-        </div>
-
-        <div class="container-content">
-
-            <div class="card background-dark2">
-                <h5 class="card-header text-center color-disabled">Stream Announcer</h5>
-                <div class="card-body">
-                    <h5 class="text-center">Description</h5>
-                    <p class="card-text">
-                        With this module you are able to announce to a defined text channel when someone on the server goes live on Twitch.
-                    </p>
-
-                    <div class="collapse" id="StreamAnnouncerConfig">
-                        <hr>
-                        <h5 class="text-center">Config</h5>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                            <label class="form-check-label" for="defaultCheck1">
-                                Enabled
-                            </label>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Select text-channel to send the messages to:</label>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            </select>
-                        </div>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                            <label class="form-check-label" for="defaultCheck1">
-                                Delete messages on stream conclusion
-                            </label>
-                        </div>
-
-                        <button type="button" class="btn btn-info">Save</button>
-
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <a class="btn btn-link btn-block" role="button" data-toggle="collapse" data-target="#StreamAnnouncerConfig" aria-expanded="false" aria-controls="StreamAnnouncerConfig" >Manage Module</a>
-                </div>
+                <button class="btn btn-block btn-module" data-parent="#accordion" data-toggle="collapse" href="#StreamRole" role="button" aria-expanded="false" aria-controls="StreamRole" >Stream Role</button>
+                <button class="btn btn-block btn-module" data-parent="#accordion" data-toggle="collapse" href="#StreamAnnouncer" role="button" aria-expanded="false" aria-controls="StreamAnnouncer" >Stream Announcer</button>
             </div>
-                
-            <div class="col-12">
 
-                <div class="collapse" id="StreamRole">
-                    <h5 class="text-center">Stream Role</h5>
-                        <!-- Accordion so we only have one tab open at a time -->
-                    <div class="accordion" id="accordionExample">
-                        <div class="card">
-                            <div class="card text-center">
-                                <div class="card-header">
-                                <ul class="nav nav-tabs card-header-tabs">
-                                    <li class="nav-item">
-                                        <a class="nav-link" data-toggle="collapse" data-target="#StreamRoleDescription" aria-expanded="false" aria-controls="StreamRoleDescription"aria-controls="collapseOne" >Description</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" data-toggle="collapse" data-target="#StreamRoleConfig" aria-expanded="false" aria-controls="StreamRoleConfig" >Configuration</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" data-toggle="collapse" data-target="#StreamRoleExample" aria-expanded="false" aria-controls="StreamRoleExample" >Example</a>
-                                    </li>
-                                </ul>
-                                </div>
+            <div class="container-content">
+                <div class="accordion-group">
 
-                                <div class="collapse" id="StreamRoleDescription" data-parent="#accordionExample">
-                                    <div class="card-body">
-                                        <p class="card-text">
-                                            This lets you add a role to someone who goes live on Twitch and remove it when they are done.  
-                                            Take the new role and put it on the top of the list so everyone knows when someone is hosting a stream.
-                                            At least now you have something else to watch on that second monitor when you are not paying attention to your own game. 
-                                        </p>
-                                    </div>
+                                    <div class="col-12">
+                    <div class="collapse" id="StreamAnnouncer">
+                        <!-- Stream Announcer -->
+                        <h5 class="text-center">Stream Announcer</h5>
 
-                                    <div class="card-footer">
-                                        hi?
-                                    </div>
-                                </div>
+                        <br>
 
-                                <div class="collapse" id="StreamRoleConfig" data-parent="#accordionExample" >
-                                    <div class="card-body">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                            <label class="form-check-label" for="defaultCheck1">
-                                                Enabled
-                                            </label>
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="exampleFormControlSelect1">Select text-channel to send the messages to:</label>
-                                            <select class="form-control" id="exampleFormControlSelect1">
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                            </select>
-                                        </div>
-
-                                        <button type="button" class="btn btn-info">Save</button>
-                                    </div>
-                                </div>
-
-                                <div class="collapse" id="StreamRoleExample" data-parent="#accordionExample" >
-                                    This is a placeholder for Example tab.
-                                </div>
+                        <div class="card background-dark2">
+                            <h5 class="card-header text-center color-disabled">Description</h5>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    With this module you are able to announce to a defined text channel when someone on the server goes live on Twitch.
+                                </p>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="collapse" id="StreamAnnouncer">
-                    <div class="collapse" id="StreamAnnouncer">
-                    <div class="card">
-                        <h5 class="card-header text-center color-disabled">Stream Announcer</h5>
-                        <div class="card-body">
-                            <h5 class="text-center">Description</h5>
-                            <p class="card-text">
-                                With this module you are able to announce to a defined text channel when someone on the server goes live on Twitch.
-                            </p>
+                        <br>
 
-                            <div class="collapse" id="StreamAnnouncerConfig">
-                                <hr>
-                                <h5 class="text-center">Config</h5>
+                        <div class="card background-dark2">
+                            <h5 class="card-header text-center color-disabled">Example</h5>
+                            <div class="card-body">
+                                <p>Here is an example of what you would see when the Stream Announcer Module is enabled and someone starts a stream.</p>
 
+                                <img src="~/Images/Examples/StreamAnnouncer.png" width="50%" class="center">
+                            </div>
+                        </div>
+
+                        <br>
+
+                        <div class="card background-dark2">
+                            <h5 class="card-header text-center color-disabled">Configuration</h5>
+                            <div class="card-body">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
                                     <label class="form-check-label" for="defaultCheck1">
@@ -177,64 +80,73 @@
                                 </div>
 
                                 <button type="button" class="btn btn-info">Save</button>
-
                             </div>
                         </div>
-                        <div class="card-footer">
-                            <a class="btn btn-link btn-block" role="button" data-toggle="collapse" data-target="#StreamAnnouncerConfig" aria-expanded="false" aria-controls="StreamAnnouncerConfig" >Manage Module</a>
+                    </div>
+                </div>
+
+                <br>
+                <div class="col-12">
+                    <div class="collapse" id="StreamRole">
+                    <h5 class="text-center">Stream Role</h5>
+
+                    <br>
+
+                    <div class="card background-dark2">
+                        <h5 class="card-header text-center color-disabled">Description</h5>
+                        <div class="card-body">
+                            <p class="card-text">
+                                This lets you add a role to someone who goes live on Twitch and remove it when they are done.  
+                                Take the new role and put it on the top of the list so everyone knows when someone is hosting a stream.
+                                At least now you have something else to watch on that second monitor when you are not paying attention to your own game.
+                            </p>
                         </div>
                     </div>
-                </div>
-                </div>  
-
-                <div class="collapse" id="Example2">
-                    <h5 class="text-center">Example2</h5>
-
-                    <div class="card">
-                        <h5 class="card-header text-center">Description</h5>
-
-                        <p class="card-text">
-                            This is a fully placeholder given I am only using this as an example given I have no idea what I am doing.
-                        </p>
-                    </div>
 
                     <br>
 
-                    <div class="card">
-                        <h5 class="card-header text-center">Configuration</h5>
+                    <div class="card background-dark2">
+                        <h5 class="card-header text-center color-disabled">Configuration</h5>
+                        <div class="card-body">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <label class="form-check-label" for="defaultCheck1">
+                                    Enabled
+                                </label>
+                            </div>
 
-                        <p class="card-text">
-                            This is a fully placeholder given I am only using this as an example given I have no idea what I am doing.
-                        </p>
+                            <div class="form-group">
+                                <label for="exampleFormControlSelect1">Select text-channel to send the messages to:</label>
+                                <select class="form-control" id="exampleFormControlSelect1">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                                </select>
+                            </div>
+
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <label class="form-check-label" for="defaultCheck1">
+                                    Delete messages on stream conclusion
+                                </label>
+                            </div>
+
+                            <button type="button" class="btn btn-info">Save</button>
+                        </div>
                     </div>
-
-                    <br>
-
-                    <div class="card">
-                        <h5 class="card-header text-center">Example</h5>
-
-                        <p class="card-text">
-                            This is a fully placeholder given I am only using this as an example given I have no idea what I am doing.
-                        </p>
-                    </div>
-
-                    <br>
-
-                    <div class="card">
-                        <h5 class="card-header text-center">Logs</h5>
-
-                        <p class="card-text">
-                            This is a fully placeholder given I am only using this as an example given I have no idea what I am doing.
-                        </p>
                     </div>
                 </div>
+
+                </div>
+
+
+            </div>
+
+            <div id="configbar">
 
             </div>
         </div>
-
-        <div id="configbar">
-
-        </div>
-
     </div>
 </div>
