--- a/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/NewPoll.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "New Poll";
 }
 
+<h2>New Poll</h2>
+<hr />
 
 <div class="row">
     <div class="col-md-12">
@@ -25,8 +27,9 @@
 
             @for (int i = 0; i < Model.TotOptions; i++)
             {
+                var optionNo = i + 1;
                 <div class="form-group">
-                    <label> Option @i</label>
+                    <label> Option @optionNo </label>
                     <br />
                     <input name="options[@i]" maxlength="100" type="text" class="form-control" />
                 </div>
