--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -3,31 +3,38 @@
     ViewData["Title"] = "View Polls";
 }
 
-<h2>My Polls</h2>
+<div class="row">
+    <div class="col-sm-11">
+        <h2>My Polls</h2>
+    </div>
+
+    <div class="col-sm-1">
+        <button class="btn btn-success" id="NewPoll">New</button>
+    </div>
+</div>
+
 <hr />
 
 <div class="row">
     <div class="col-md-12">
-        <form method="post">
-            <div class="form-group">
-                <label asp-for="Polls"></label>
-                <select asp-items="Model.Polls" id="poll" class="form-control">
-                    <option disabled selected> -- select a poll -- </option>
-                </select>
-            </div>
+        <div class="form-group">
+            <label asp-for="Polls"></label>
+            <select asp-items="Model.Polls" id="poll" class="form-control">
+                <option disabled selected> -- select a poll -- </option>
+            </select>
+        </div>
 
-            <div class="form-group">
-                <label asp-for="Title" class="font-size-small"></label>
-                <p id="Title"></p>
-            </div>
+        <div class="form-group">
+            <label asp-for="Title" class="font-size-small"></label>
+            <p id="Title"></p>
+        </div>
 
-            <br />
+        <br />
 
-            <div class="form-group">
-                <label asp-for="Options" class="font-size-small"></label>
-                <div id="Options"></div>
-            </div>
-        </form>
+        <div class="form-group">
+            <label asp-for="Options" class="font-size-small"></label>
+            <div id="Options"></div>
+        </div>
     </div>
 </div>
 
@@ -50,13 +57,14 @@
             return text.trim().substr(text.indexOf(" ") + 1)
         }
 
+        // Populate selected polls data
         $("#poll").on('change', function () {
             var Ids = $('#poll').val().split("-");
             var messageId = Ids[0];
             var channelId = Ids[1];
 
             $.when(GetPollDetails(channelId, messageId)).done(function (response) {
-               
+
 
                 $("#Title").text(RemoveLeadingEmoticon(response.title));
                 $("#Options").empty();
@@ -66,6 +74,11 @@
                     $("#Options").append($("<p></p>").text(RemoveLeadingEmoticon(option.option) + " : " + option.voteCount));
                 })
             });
+        });
+
+        // Direct user to new poll form
+        $("#NewPoll").on('click', function () {
+            window.location = `${window.location.href}/newpoll`
         });
     </script>
 }
