--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -24,4 +24,18 @@
             </div>
         </div>
     }
+
+    <div class="col-sm">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">
+                    Poll Manager
+                    <a style="color: black" class="float-right" asp-controller="Poll">
+                        <i class="fas fa-cog"></i>
+                    </a>
+                </h5>
+                <p class="card-text">Create and view polls.</p>
+            </div>
+        </div>
+    </div>
 </div>
