--- a/src/Volvox.Helios.Web/Views/Home/Example.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Example.cshtml
@@ -22,7 +22,7 @@
             <div class="container-content">
                 <div class="accordion-group">
 
-                                    <div class="col-12">
+                    <div class="col-12">
                     <div class="collapse" id="StreamAnnouncer">
                         <!-- Stream Announcer -->
                         <h5 class="text-center">Stream Announcer</h5>
@@ -45,7 +45,7 @@
                             <div class="card-body">
                                 <p>Here is an example of what you would see when the Stream Announcer Module is enabled and someone starts a stream.</p>
 
-                                <img src="~/Images/Examples/StreamAnnouncer.png" width="50%" class="center">
+                                <img src="~/Images/Examples/StreamAnnouncer.png" width="50%" class="img-center">
                             </div>
                         </div>
 
