Changed nav bar colors
Getting closer to fixing the issue with how the scroll bar is displayed.  I have two now... need to find where the second is and remove it.

--- a/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -8,7 +8,7 @@
 
 @if (showBanner)
 {
-    <nav id="cookieConsent" class="navbar navbar-expand navbar-dark bg-dark fixed-bottom" role="alert">
+    <nav id="cookieConsent" class="navbar navbar-expand navbar-dark background-dark1 fixed-bottom" role="alert">
         <div class="container">
             <div class="navbar-collapse collapse">
                 <p class="navbar-text">
