--- a/src/Volvox.Helios.Web/Views/Home/Example2.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Example2.cshtml
@@ -1,26 +1,100 @@
-
 @{
     ViewData["Title"] = "Example";
 }
 
-    <nav id="serverbar">
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="img-server-icon" >
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="img-server-icon" >
-        <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="img-server-icon" >
-    </nav>
-
-
 <div id="wrapper">
-    
 
-    <nav id="modulebar">
-        <h5 class="text-center">Current Modules</h5>
+    <div id="sidebar-wrapper">
 
-        <button type="button" class="btn btn-link btn-block" data-toggle="collapse" data-target="#StreamRole" aria-expanded="false" aria-controls="StreamRole" >Stream Role</button>
+    </div>
 
-        <button type="button" class="btn btn-link btn-block" data-toggle="collapse" data-target="#StreamAnnouncer" aria-expanded="false" aria-controls="StreamAnnouncer" >Stream Announcer</button>
-        <button type="button" class="btn btn-link btn-block" data-toggle="collapse" data-target="#Example2" aria-expanded="false" aria-controls="Example2" >Example2</button>
+    <div id="page-content-wrapper">    
+            <div id="modulebar-wrapper">
 
-    </nav>
+            </div>
 
+            <div class="container-content">
+                <div class="container">
+                    <div class="col-12">
+                        <h3 class="text-center">Volvox.Helios</h3>
+                        <h5 class="text-center">A New kind of discord bot</h5>
+                        <br>
+                    </div>
+
+                    <div class="col-12">
+                        <h3 class="text-center">Current Modules</h3>
+                    </div>
+
+                    <br>
+
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">                       
+                                <div class="card background-dark2">
+                                    <h5 class="card-header text-center ">Stream Role</h5>
+                                    <div class="card-body">
+                                        <p>
+                                            Ever wanted to see who on the server was currently streaming and make it easy to see?  
+                                            Enable this module and Volvox will give people currently streaming on Twitch.tv a new role.  
+                                            Go ahead and place all your streamers in one list.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="card background-dark2">
+                                    <h5 class="card-header text-center">Stream Announcer</h5>
+                                    <div class="card-body">
+                                        <p>
+                                            Wanted to keep tabs on the people who stream on your server by announcing to a room when they go live?
+                                            Well now you can with 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>                        
+                        </div>
+
+                        <br>
+
+                        <h5>About</h5>
+                        <p>
+                            Volvox is a community dedicated to helping others learn various technologies. We teach members by having everyone contribute to open source projects. The goal is to eventually have multiple projects ranging across different technologies so that members can learn whatever they would like. We're currently at over 100 members and are always looking for more!
+                        </p>
+
+                        <h5>Projects</h5>
+                        <p>
+                            Volvox.Helios - Modular Discord bot written in ASP.NET Core, Entity Framework, Razor. The goal of this bot is to be the only bot you'll have to add to your Discord server. It will be managed from a web interface that will show a vast array of data and statistics. Each module has its own settings and can be enabled or disabled as the admin of the Discord server chooses.
+                        </p>
+
+                        <h5>How to Join</h5>
+                        <p>
+                            It's simple to join, just join our Discord Server! After you join please head over to the introductions channel so we can assign you the proper role. You can also message an Admin and they'll get you all setup.
+                        </p>
+                    </div>
+
+                    <br>
+
+                    <div class="col-12">
+                        <h5>Links</h5>
+                        <ul>
+                            <li>
+                                Repository: <a href="https://github.com/VolvoxCommunity/Volvox.Helios">https://github.com/VolvoxCommunity/Volvox.Helios</a>
+                            </li>
+                            <li>
+                                Project Board: <a href="https://github.com/VolvoxCommunity/Volvox.Helios/projects">https://github.com/VolvoxCommunity/Volvox.Helios/projects</a>
+                            </li>
+                            <li>
+                                Website: <a href="http://volvox.tech/">http://volvox.tech</a>
+                            </li>
+                            <li>
+                                Discord: <a href="https://discordapp.com/invite/jReSmc3">https://discordapp.com/invite/jReSmc3</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+
+    </div>
 </div>
