Updated analytics dropdown list to show guild icons.

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
     @RenderSection("Scripts", required: false)
     <script>
         $('#settingsNavDropdown').click(() => {
-            $('#settingsDropDown').populateSettings();
+            $('#settingsDropDown').populateGuildsInBot();
         });
 
         $('#analyticsNavDropdown').click(() => {
