--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -86,11 +86,11 @@
     @RenderSection("Scripts", required: false)
     <script>
         $('#settingsNavDropdown').click(() => {
-            $('#settingsDropDown').populateGuildsInBot();
+            $('#settingsDropDown').populateSettings();
         });
 
         $('#analyticsNavDropdown').click(() => {
-            $('#analyticsDropDown').populateGuildsInBot();
+            $('#analyticsDropDown').populateAnalytics();
         });
     </script>
 </body>
