Unique posters statistic

--- a/src/Volvox.Helios.Web/Views/Analytics/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Analytics/Index.cshtml
@@ -13,7 +13,11 @@
             <h5 class="card-title">
                 ChatTracker
             </h5>
-            <p class="card-text">Total Messages: @Model.ChatTracker.Messages.Count</p>
+            <p class="card-text">
+            Total Messages: @Model.ChatTracker.Messages.Count
+            <br/>
+            Unique Posters: @Model.ChatTracker.UniqueUsers
+            </p>
         </div>
     </div>
 </div>
