update example on poll page

--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -38,9 +38,11 @@
             <div id="Options">
                 <p>Not cool : 0</p>
 
+                <p>Its alright... : 0</p>
+
                 <p>Pretty cool : 3</p>
 
-                <p>It's a masterpiece! : 99</p>
+                <p>Top notch: 304</p>
             </div>
         </div>
     </div>
